# eventix2acsm

./: .env-template  .gitignore  Cargo.toml  LICENSE.md  README.md  eventix.json  test.json
fixtures/: test.json  test_add_all_new_drivers.json  test_add_all_new_drivers_output.json  test_add_one_update_one.json  test_add_one_update_one_output.json  too_many_drivers.json
src/: acsm.rs  eventix.rs  main.rs  oauth2.rs
