[package]
name = "eventix2acsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
axum = "0.7.2"
axum-macros = "0.4.0"
csv = "1.3.0"
dotenv = "0.15.0"
env_logger = "0.10.1"
itertools = "0.12.0"
log = "0.4.20"
oauth2 = "4.4.2"
radix_fmt = "1.0.0"
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tempfile = "3.8.1"
test-case = "3.3.1"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread", "fs"] }
url = "2.5.0"
